--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html><html lang="en" style="scroll-behavior:smooth"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Nodavis - Discover Japan Like a Local</title>
+<!DOCTYPE html><html lang="en" style="scroll-behavior:smooth"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Nodavis - Discover Japan Like a Local</title><link rel="icon" type="image/png" href="siteicon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="siteicon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="siteicon.png">
+<link rel="apple-touch-icon" href="siteicon.png">
+<meta name="theme-color" content="#4F6DFF">
 <meta name="description" content="Nodavis offers personalized Japan travel planning, bilingual consulting, and real estate guidance led by US CPA and licensed agent Takuma Okamoto in Tokyo.">
 <meta name="keywords" content="japan travel consultant, private tour guide tokyo, bilingual japan guide, japan real estate investment, buy property in japan, visa support japan, tokyo relocation services, local insider tips japan, japan itinerary planning, cpa real estate japan">
 <link rel="canonical" href="https://nodavis.com/">
