--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <img src="https://images.unsplash.com/photo-1496483648148-47c686dc86a8?auto=format&fit=crop&w=800&q=60" alt="Japan Rail Pass"/>
     <h3>Japan Rail Pass</h3>
     <p>The most cost-effective way to explore Japan's extensive train network.</p>
-    <a href="https://www.jrpass.com/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">Get Your Pass</a>
+    <a href="https://click.jrpass.com/SHFD" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">Get Your Pass</a>
   </article>
   <article>
     <img src="https://images.unsplash.com/photo-1513161455079-7dc1de15ef3e?auto=format&fit=crop&w=800&q=60" alt="Pocket WiFi Rental"/>
